@@ -1,6 +1,12 @@
+2005-08-09  Timo Schulz  <ts@g10code.com>
+
+	* GPGOptionsDlg.cpp: Include MapiGPGME.h and
+	HashTable.h from ../src. This fixes the unresolved
+	object problem.
+
 2005-08-09  Werner Koch  <wk@g10code.com>
 
-	* GPGExch.cpp: Removed HashTable.h.  Include MapiGPGME>h from
+	* GPGExch.cpp: Removed HashTable.h.  Include MapiGPGME.h from
 	../src.
 	(CGPGExchExt): Use factory method instead of new to create the
 	gpgme object.
